--- a/index.htm
+++ b/index.htm
@@ -46,7 +46,11 @@
     "((~((x * y) - (~x))) & (((-x) ^ (x * param1)) & ((param2 ^ x) ^ (y ^ 7)))) % param3",
     "((~((x - param1) % (-y))) & (((x ^ y) + (~x)) ^ ((param2 + x) | (~y)))) % param3",
     "(~(-((y / param1) - (x % param2)))) % param3",
-    "(-(((x - y ^ param1) & (~y * param2)) % (-(x * y)))) % param3"
+    "(-(((x - y ^ param1) & (~y * param2)) % (-(x * y)))) % param3",
+    "((((13 + y) + (param1 % x)) * ((y - x) - (param2 / x))) + ((-(-x)) / ((y + x) - (-x)))) % param3",
+    "(~(((y * y) | (param1 - x)) * ((param3 % x) | (x ^ param2)))) % 7",
+    "(-(((x | y) + (x % y)) - ((param1 & y) | (y * y)))) % param2",
+    "((~((y * param1) % (x + y))) ^ (((1 ^ y) ^ (-y)) - (~(y / param2)))) % param3"
         ];
 
     </script>
