--- a/index.htm
+++ b/index.htm
@@ -83,7 +83,17 @@
     "((((x ^ x) | (y - param1)) + ((x / y) / (-y))) ^ (-((x - param2) * (-y)))) % param3",
     "((-(-(x | param1))) * (~(-(param2 ^ y)))) % param3",
     "((((x - param1) + (y / y)) % (~(y - x))) & (-((y - param1) % (param2 * y)))) % param3",
-    "((~(~(~x))) ^ ((-(x % param1)) ^ ((1 / y) / (param2 % y)))) % param3"
+    "((~(~(~x))) ^ ((-(x % param1)) ^ ((1 / y) / (param2 % y)))) % param3",
+    "(((-(param1 + y)) & (-(-x))) - (((-x) + (y | x)) * (~(x + param2)))) % param3",
+    "((((param1 & x) - (y / param2)) / ((x & x) % (x | 17))) | (~((10 - y) - (y & x)))) % param3",
+    "((((~y) * (~x)) / (~(y + x))) + ((~(y ^ param1)) - ((~y) & (~y)))) % param2",
+    "((((y + x) - (x + param1)) * (~(~y))) + (((-y) & (y % x)) * ((x & param2) ^ (x & x)))) % param3",
+    "(((y & param1) + (x + x)) * ((y | x) * (x & x))) & (((param2 ^ y) * (x % param3)) % ((x + x) | (y / x)))",
+    "(~(((param1 - y) % (-x)) | ((y / x) / (~y)))) % param2",
+    "(~(((param1 - y) % (-x)) | ((y / x) / (~y)))) % param2",
+    "(-((~(param1 / x)) % ((y ^ x) / (-x)))) % param2",
+    "((~((~y) / (x ^ y))) % ((~(x ^ x)) * ((y + param2) | (~y)))) % param3",
+    "(~(((y ^ param1) / (y / x)) - (-(-y)))) % param2"
 
         ];
 
