105 fn, added Math.abs() anti dark, / for grayscale images & fixes

--- a/index-new.htm
+++ b/index-new.htm
@@ -107,8 +107,12 @@
     "(~((-(param1 | y)) | ((param2 ^ x) % (x + x)))) % param3",
     "((((y ^ x) % (param1 ^ y)) - ((y | y) * (y % x))) & ((-(y - x)) & ((y - param2) ^ (y + x)))) % param3", 
     "((((~y) / (param1 ^ x)) + ((y * param2) ^ (x + y))) + (~((x + y) - (-x)))) % 3", 
-    "((((x / y) * (~y)) % ((~x) - (param1 / x))) ^ (((y % y) | (y | param2)) ^ (~(~y)))) % param3"
-    
+    "((((x / y) * (~y)) % ((~x) - (param1 / x))) ^ (((y % y) | (y | param2)) ^ (~(~y)))) % param3",
+    "((~((~y) & (-y))) / (((param1 % x) - (2 & x)) ^ ((y - y) % (param2 % x)))) % param3", 
+    "(~(-((y * x) ^ (y / Math.abs(param1))))) % param2", 
+    "((-((x - y) - (~x))) ^ (((x | y) * (x + y)) ^ ((y + param1) * (x | param2)))) % param3", 
+    "((((y & x) - (~x)) ^ ((Math.abs(param1) | y) ^ (x % param2))) | ((-(x & y)) & (~(~y)))) % param3 / 2", 
+    "((-((7 * y) - (~x))) + (((~x) - (x | param1)) + ((x * Math.abs(param2)) - (x ^ 3)))) % param3"    
         ];
 
     </script>
