--- a/index-new.htm
+++ b/index-new.htm
@@ -27,12 +27,12 @@
     "((((x + param1) ^ (x | x)) | (~(-y))) % (~(~(param2 & x)))) % param3",
     "((((~x) * (y * y)) ^ (~(~x))) & ((-(-x)) / ((y / param1) | (y - param2)))) % param3",
     "((((-x) % (-y)) & ((param1 / x) * (x - x))) | (((y - 19) ^ (y + param2)) % ((y & x) % (x ^ y)))) % param3",
-    "(((-(x * y)) * (-(x % param1))) & (-(~(x * x)))) % param2",
+    "((-(x * y)) * (-(x % Math.abs(param1))) & (-(~(x * x)))) % param2",
     "((((y | y) % (param1 % x)) - (-(y / param2))) + ((~(x / param3)) - ((x - y) | (x - y)))) % 4",
     "(~(((y * y) * (-x)) - ((x / y) % (~x)))) % param1",
     "((~(-(param1 * x - y))) % (((~y) - (x - param2)) | (~(y & x)))) % param3",
     "(~(((param1 - x) ^ (x & y)) & ((~param2) * (y ^ x)))) % param3",
-    "(~(((param1 - x) ^ (x & y)) & ((~x) * (y ^ x) * param2))) % param3",
+    "(~(((param1 - x) ^ (x & y)) & ((~x) * (y ^ x) * Math.abs(param2))) % param3",
     "((((x ^ x) % (-x)) / ((x + x) / (param1 ^ x))) + (((y ^ y) / (~y)) - (-(y % param2)))) % param3",
     "(((~(x & y)) + ((~y) & (y | param1))) & (((~x) + (x & y)) - ((x / param2) | (x * y)))) % param3",
     "((((y ^ y) + (param1 % y)) + ((~y) | (-x))) % (((x | x) - (param2 % y)) | ((-x) + (y + x)))) % param3",
@@ -112,7 +112,13 @@
     "(~(-((y * x) ^ (y / Math.abs(param1))))) % param2", 
     "((-((x - y) - (~x))) ^ (((x | y) * (x + y)) ^ ((y + param1) * (x | param2)))) % param3", 
     "((((y & x) - (~x)) ^ ((Math.abs(param1) | y) ^ (x % param2))) | ((-(x & y)) & (~(~y)))) % param3 / 2", 
-    "((-((7 * y) - (~x))) + (((~x) - (x | param1)) + ((x * Math.abs(param2)) - (x ^ 3)))) % param3"    
+    "((-((7 * y) - (~x))) + (((~x) - (x | param1)) + ((x * Math.abs(param2)) - (x ^ 3)))) % param3",
+    "((~(~(~y))) ^ (~((x % param1) % (x % y)))) % param2", 
+    "((((~x) % (-y)) - ((x | y) + (param1 - x))) * (~(-(x % param2)))) % param3", 
+    "(( ((130 * Math.abs(param1) - y)) + (~x) - ((x ^ x) | (x | y))) ^ (-((~x) - (x * Math.abs(param2))))) % param3 / 2",
+    "((((x | y) - (x + 1)) % ((y - param1) - (x * y))) - (((x % y) & (3 * x)) % ((y ^ param2) ^ (x / param3))))",
+    "(((-(x & x)) & ((param1 | y) - (-y))) / (((y & y) ^ (~x)) - ((-y) ^ (x & x)))) % param2",
+    "((((~y + param1) * (~x)) + (~(y + param2))) + ((~y) - ((~y) & (~y)))) % param3"  
         ];
 
     </script>
