--- a/index-new.htm
+++ b/index-new.htm
@@ -30,7 +30,7 @@
     "((-(x * y)) * (-(x % Math.abs(param1))) & (-(~(x * x)))) % param2",
     "((((y | y) % (param1 % x)) - (-(y / param2))) + ((~(x / param3)) - ((x - y) | (x - y)))) % 4",
     "(~(((y * y) * (-x)) - ((x / y) % (~x)))) % param1",
-    "((~(-(param1 * x - y))) % (((~y) - (x - param2)) | (~(y & x)))) % param3",
+    "((~(-(Math.abs(param1) * x - y))) % (((~y) - (x - param2)) | (~(y & x)))) % param3",
     "(~(((param1 - x) ^ (x & y)) & ((~param2) * (y ^ x)))) % param3",
     "(~(((param1 - x) ^ (x & y)) & ((~x) * (y ^ x) * Math.abs(param2))) % param3",
     "((((x ^ x) % (-x)) / ((x + x) / (param1 ^ x))) + (((y ^ y) / (~y)) - (-(y % param2)))) % param3",
@@ -61,7 +61,7 @@
     "((~((x * param1) % (x ^ y))) ^ (((1 ^ y) ^ (-y)) - (~(y / param2)))) % param3",
     "(((-(y % param1)) | ((y ^ x) + (~y))) | (((-y) + (-y)) ^ ((-x) * (x * y)))) % param2",
     "(-(((-x) % (x / param1)) ^ ((param2 & x) / (-y)))) % param3",
-    "((((x + 3) ^ (param1 - x)) ^ ((~y) ^ (y % y))) & (((y & param2) / (~x)) * ((~y) | (y / x)))) % param3",
+    "((((x + param1) ^ -x) ^ ((~y) ^ (y % y))) & (((y & param2) / (~x)) * ((~y) | (y / x)))) % param3",
     "((((y - x) & (x * x)) + ((-y) ^ (x % param1))) * ((-(13 + x)) - ((x * param2) ^ (7 - y)))) % param3",
     "((((param1 % x) | (~y)) + ((y % y) | (-y))) & ((-(param2 / y)) | (~(~x)))) % param3",
     "((~((~y) % (~x))) & (((y / y) - (y / param1)) ^ ((x & y) * (param2 & x)))) % param3",
@@ -89,6 +89,7 @@
     "((((~y) * (~x)) / (~(y + x))) + ((~(y ^ param1)) - ((~y) & (~y)))) % param2",
     "((((y + x) - (x + param1)) * (~(~y))) + (((-y) & (y % x)) * ((x & param2) ^ (x & x)))) % param3",
     "(((y & param1) + (x + x)) * ((y | x) * (x & x))) & (((param2 ^ y) * (x % param3)) % ((x + x) | (y / x)))",
+    "(((y & (2 * param1 + 1)) + (x + x)) * ((y | x) * (x & x))) & (((param2 ^ y) * (x % param3)) % ((x + x) | (y / x)))",
     "(~(((param1 - y) % (-x)) | ((y / x) / (~y)))) % param2",
     "(~(((param1 - y) % (-x)) | ((y / x) / (~y)))) % param2",
     "(-((~(param1 / x)) % ((y ^ x) / (-x)))) % param2",
@@ -118,7 +119,16 @@
     "(( ((130 * Math.abs(param1) - y)) + (~x) - ((x ^ x) | (x | y))) ^ (-((~x) - (x * Math.abs(param2))))) % param3 / 2",
     "((((x | y) - (x + 1)) % ((y - param1) - (x * y))) - (((x % y) & (3 * x)) % ((y ^ param2) ^ (x / param3))))",
     "(((-(x & x)) & ((param1 | y) - (-y))) / (((y & y) ^ (~x)) - ((-y) ^ (x & x)))) % param2",
-    "((((~y + param1) * (~x)) + (~(y + param2))) + ((~y) - ((~y) & (~y)))) % param3"  
+    "((((~y + param1) * (~x)) + (~(y + param2))) + ((~y) - ((~y) & (~y)))) % param3",
+    "((((~x) + (1 | y)) % ((x - x) - (y - param1))) - (((-y) | (y - y)) * ((x / y) ^ (param2 & x)))) % param3",
+    "(((y & (2 * param1 + 1)) + (x + x)) * ((y | x) * (x & x))) & (((param2 ^ y) * (x % param3)) % ((x + x) | (y / x)))",
+    "((((param1 | x) % (y - 18)) & (~(~x))) + (-(~(y * Math.abs(param2))))) % param3",
+    "((((x % y) - (x ^ param3)) - ((y | y) * (y * -Math.abs(param1)))) + ((-(x * x)) * ((x / y) & (-x)))) % param2",
+    "((((y - x) % (y + param1)) - ((-y) - (-y))) % (~((x & param2) ^ (x * x)))) % param3", 
+    "((((y ^ 2 + Math.abs(param1)) % (y + x)) - ((-y) - (-y))) % (~((y & param2) ^ (x * x)))) % param3", 
+    "((((x ^ y) + (x ^ param1)) - (-(y * x))) % (-(~(-x * param2)))) % param3", 
+    "((((11 - x) / (y & y)) ^ ((~x) * (y + param1))) / ((-(~x)) % ((~y) | (param2 | x)))) % param3", 
+    "(((~(y + y)) / ((y | param1) + (param2 | x))) - (~((-x) % (x - 3)))) % param3"    
         ];
 
     </script>
@@ -142,27 +152,22 @@
             <input type="range" id="modfun" min="1" max="3" value="2">
         </div>
         <div class="control-group">
-            <label for="invert">Invert:</label>
-            <input type="checkbox" id="invert">
-        </div>
-        <div class="control-group">
             <label for="function-code">Pattern Function:</label>
-            <textarea id="function-code" rows="13" >function f(x, y, param1, param2, param3) {
+            <textarea id="function-code" rows="13" style="width: 94%; ">function f(x, y, param1, param2, param3) {
     if (x === 0) return 0;
         
     return ((~((y * param1) % (x + y))) ^ (((1 ^ y) ^ (-y)) - (~(y / param2)))) % param3;
 }
             </textarea>
         </div>
-        <div class="button-group">
-            <button id="update-btn">Update Pattern</button>
-            <button id="save-btn">Save Image</button>
-            <button id="save4x-btn">Save 4X</button>
+        <div class="button-group" style="width: 100%; ">
+            <button id="rndfn-btn" ><b>random function</b></button>
+            <button id="rndfn-val" ><b>random values</b></button>
+            <button id="update-btn">Update</button>
         </div>
         <br />
-        <div class="button-group">
-            <button id="rndfn-btn">random function</button>
-            <button id="rndfn-val">random values</button>
+        <div class="button-group" style="width: 102%; ">
+            <button id="invert-btn">invert</button>
             <button id="rndfn-val">random colors</button>
         </div>
 
@@ -194,6 +199,10 @@
             The code does not resort to evaluating a string.
         </p>
         </p>
+        <div class="button-group">
+            <button id="save-btn"><b>Save Image</b></button>
+            <button id="save4x-btn"><b>Save 4X</b></button>
+        </div>
 
     </div>    
 
@@ -202,6 +211,7 @@
         const ctx = canvas.getContext('2d');
         const scale = 3;
         const baseSize = 256;
+        let invert = 0;
         
         const bufferCanvas = document.createElement('canvas');
         bufferCanvas.width = baseSize;
@@ -213,7 +223,7 @@
         const param2Input = document.getElementById('param2');
         const param3Input = document.getElementById('param3');
         const modfunInput = document.getElementById('modfun');
-        const invertInput = document.getElementById('invert');
+        const invertInput = document.getElementById('invert-btn');
         const functionCode = document.getElementById('function-code');
         const updateBtn = document.getElementById('update-btn');
         const saveBtn = document.getElementById('save-btn');
@@ -231,6 +241,15 @@
             param3Input.value = randomValue;
         }
 
+        function invertVal() {
+
+            if (parseInt(invertVal.value) == 1) {
+                invert = 0
+            } else {
+                invert = 1
+            } 
+        }
+
         function updatePattern() {
             if (updateTimeout) {
                 clearTimeout(updateTimeout);
@@ -241,7 +260,7 @@
                 const param2 = parseInt(param2Input.value);
                 const param3 = parseInt(param3Input.value);
                 const modfun = parseInt(modfunInput.value);
-                const invert = invertInput.checked;
+
 
                 try {
                     eval(functionCode.value);
@@ -482,7 +501,7 @@ return `;
         param2Input.addEventListener('input', updatePattern);
         param3Input.addEventListener('input', updatePattern);
         modfunInput.addEventListener('input', updatePattern);
-        invertInput.addEventListener('change', updatePattern);
+        invertInput.addEventListener('click', invertVal);
         updateBtn.addEventListener('click', updatePattern);
         saveBtn.addEventListener('click', saveImage);
         save4xBtn.addEventListener('click', saveImage4X);
